Applied good font for the Navbar

--- a/resource.css
+++ b/resource.css
@@ -140,7 +140,7 @@ header h1 {
   font-size: 40px;
   color:wheat;
   font-weight: bolder;
-  font-family: monospace;
+  font-family: sans-serif;
   text-transform: uppercase;
   text-shadow: 0px 0px 12px #fff;
   padding: 0px 11px 11px 11px;
